components/apicurio/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: appstudio
    appstudio.openshift.io/component: apicurio
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elapicurio
  namespace: default
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-apicurio
    weight: null
status: {}
